--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
 </head>
 
 <body>
-    <div>
+    <div class="container">
         <h1 class="display-4">Đề thi trắc nghiệm</h1>
         <div id="questionList"></div>
+        <div class="text-center display-4">
+            <button class="btn btn-primary" id="handleResult">Kết quả</button>
+        </div>
     </div>
+
+
+
+
+
+
+
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
